# aoc-rust

./: .gitignore  Cargo.toml
2015/: Cargo.toml  input.py
2019/: .gitignore  Cargo.toml  README.md  input.py
2020/: .gitignore  Cargo.toml  input.py
2021/: Cargo.toml
2022/: Cargo.toml
2022/src/: lib.rs
2023/: Cargo.toml  input.py  prepare.sh
2024/: Cargo.toml  input.py  prepare.sh
2025/: Cargo.toml  input.py
aoclib/: Cargo.toml
aoclib/src/: coord2.rs  lib.rs
benches/: 06.rs
src/: lib.rs
