[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Lauri Koskela"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.6.1"
regex = "1"
lazy_static = "1.4.0"
itertools = "0.8.2"
num-complex = "0.2.3"
fraction = "0.6.2"
num-integer = "0.1.41"
num-bigint = "0.3.0"