[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Lauri Koskela <lapamiko@gmail.com>"]
edition = "2021"


[dependencies]
aoclib = { path = "../aoclib" }
regex = "1.5.4"
lazy_static = "1.4.0"
itertools = "0.13"
num-integer = "0.1.44"
num-complex = "0.4.4"
num-rational = "0.4.1"
ndarray = "0.16"
anyhow = "1.0.66"
lru = "0.12.1"
nalgebra = "0.32.3"
