[package]
name = "aoc2025"
version = "0.1.0"
authors = ["Lauri Koskela <lk@lkoskela.com>"]
edition = "2024"


[dependencies]
aoclib = { path = "../aoclib" }
regex = "1.5.4"
lazy_static = "1.4.0"
itertools = "0.14"
num-integer = "0.1.44"
num-complex = "0.4.4"
num-rational = "0.4.1"
ndarray = "0.17"
nalgebra = "0.34.1"
rayon = "1.11.0"
arrayvec = "0.7.6"
fraction = "0.15.3"
